force-app/main/default/objects/tkt_Email_Notification_Setting__mdt/tkt_Email_Notification_Setting__mdt.object-meta.xml
<CustomObject>
    <description>TNOX: Configures automated email notifications for ticket lifecycle events (creation, status change, comments, closure). Each record controls one notification type with template, recipient, and sender options.</description>
    <label>Ticket Email Notification Setting</label>
    <pluralLabel>Ticket Email Notification Settings</pluralLabel>
</CustomObject>