force-app/main/default/objects/tkt_Email_Notification_Setting__mdt/fields/Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Email_Body__c</fullName>
    <description>TNOX: Email body template. Supports merge fields: {!TicketNumber}, {!TicketSubject}, {!Status}, {!Description}, {!OwnerName}, {!AssigneeName}, {!CommentBody}, {!TicketLink}</description>
    <label>Email Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>