force-app/main/default/objects/tkt_Email_Notification_Setting__mdt/fields/Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Email_Subject__c</fullName>
    <description>TNOX: Email subject line. Supports merge fields: {!TicketNumber}, {!TicketSubject}, {!Status}</description>
    <label>Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>