force-app/main/default/objects/tkt_Email_Notification_Setting__mdt/fields/Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Name__c</fullName>
    <description>TNOX: Developer Name of the Email Template to use. If specified, this takes precedence over Email Subject and Email Body fields. Template should be related to tkt_Ticket__c object.</description>
    <inlineHelpText>Enter the Developer Name of an Email Template. Leave blank to use the Email Subject and Body fields instead.</inlineHelpText>
    <label>Email Template Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>