force-app/main/default/objects/tkt_Email_Notification_Setting__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>TNOX: Controls whether this email notification is enabled</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>