force-app/main/default/objects/tkt_Email_Notification_Setting__mdt/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <description>TNOX: Type of notification event that triggers the email</description>
    <label>Notification Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ticket Created - Owner Confirmation</fullName>
            </value>
            <value>
                <fullName>Ticket Created - Queue Assignment</fullName>
            </value>
            <value>
                <fullName>Ticket Status Changed</fullName>
            </value>
            <value>
                <fullName>Ticket Ownership Changed</fullName>
            </value>
            <value>
                <fullName>Comment Added - Notify Owner</fullName>
            </value>
            <value>
                <fullName>Comment Added - Notify Assignee</fullName>
            </value>
            <value>
                <fullName>Ticket Closed - Notify Assignee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>