force-app/main/default/objects/tkt_Email_Notification_Setting__mdt/fields/Priority_Order__c.field-meta.xml
<CustomField>
    <fullName>Priority_Order__c</fullName>
    <description>TNOX: Order in which notifications are processed (lower numbers first)</description>
    <label>Priority Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>