force-app/main/default/objects/tkt_Email_Notification_Setting__mdt/fields/Recipient_Type__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Type__c</fullName>
    <description>TNOX: Who should receive this notification</description>
    <label>Recipient Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ticket Owner</fullName>
            </value>
            <value>
                <fullName>Assigned User</fullName>
            </value>
            <value>
                <fullName>Queue Members</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>