force-app/main/default/objects/tkt_Email_Notification_Setting__mdt/fields/Send_HTML_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_HTML_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <description>TNOX: If checked, the email body will be treated as HTML</description>
    <label>Send HTML Email</label>
    <type>Checkbox</type>
</CustomField>