force-app/main/default/objects/tkt_Email_Notification_Setting__mdt/fields/Use_Org_Wide_Email__c.field-meta.xml
<CustomField>
    <fullName>Use_Org_Wide_Email__c</fullName>
    <description>TNOX: Email address of the Org Wide Email Address to use as sender. Leave blank to use running user.</description>
    <inlineHelpText>Optional: Enter the email address of an Org-Wide Email Address to use as the sender.</inlineHelpText>
    <label>Org Wide Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>